# turbo-claw

./: .gitmodules  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md
.superpowers/brainstorm/38965-1778059096/content/: flow-lifecycle-v2.html  flow-lifecycle.html
.superpowers/brainstorm/38965-1778059096/state/: server-info  server-stopped
docs/: TURBO-CLAW-PLAN.md
docs/superpowers/plans/: 2026-05-06-turbo-claw-impl.md
docs/superpowers/specs/: 2026-05-06-turbo-claw-design.md
src/: bridge.rs  lib.rs  main.rs
src/claude/: binary.rs  mod.rs  protocol.rs  session.rs
src/ui/: flow.rs  markdown.rs  mod.rs  output_view.rs  permission_dialog.rs  progress_dialog.rs  prompt_dialog.rs
tests/: claude_binary.rs  claude_protocol.rs  markdown.rs
