[package]
name = "turbo-claw"
version = "0.1.0"
edition = "2024"
license = "MIT"

[lib]
name = "turbo_claw"
path = "src/lib.rs"

[[bin]]
name = "turbo-claw"
path = "src/main.rs"

[dependencies]
turbo-vision = "1.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
pulldown-cmark = "0.12"
dirs = "6"
which = "7"
